syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/healthcheck";

package healthcheck;

service HealthCheck {
    // rpc get overview status of service
    rpc Status(StatusRequest) returns (StatusReply);
    
    // Store a data to p2p
    rpc P2PStore(P2PStoreRequest) returns (P2PStoreReply);

    // Retrieve a key from p2p
    rpc P2PRetrieve(P2PRetrieveRequest) returns (P2PRetrieveReply);

    //  TODO : add new ping requests to check dependencies like p2p, rqserice, pastel,...
}

message StatusRequest {
}

message StatusReply {
    string status_in_json = 1;
}

message P2PStoreRequest {
    bytes value = 1;
}
message P2PStoreReply {
    string key = 1;
}

message P2PRetrieveRequest {
    string key = 1;
}
message P2PRetrieveReply {
    bytes value = 1;
}